Fix category name text overflowing

--- a/src/features/categories/components/ProductCategory/ProductCategory.module.css
+++ b/src/features/categories/components/ProductCategory/ProductCategory.module.css
@@ -18,13 +18,15 @@
 
   .name {
     font-size: 1rem;
+    max-width: 10rem;
+    word-break: break-all;
   }
 }
 
 @media (width <= 800px) {
   .category {
     .imgContainer {
-      padding: 0.5rem 0.5rem 0 0.5rem;
+      padding: 0.5rem;
     }
   }
 }
